--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src=""></script>
     <title>DevLab</title>
-    <link rel="shortcut icon" href="img/icon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
@@ -44,6 +44,8 @@
         <p class="parrafo-banner">Nos enfocamos en enseñar las plataformas líderes en la industria <br>
         para que puedas estar preparado para tus desafios profesionales</p>
     </div>
+    <!-- Boton Whatsapp -->
+    <a href="#"><i class="fa-brands fa-whatsapp whats"></i></a>
     <!-- Info web -->
     <h2 class="titulo-info">Nuestros Cursos</h2>
     <br><br>
