--- a/cursos.html
+++ b/cursos.html
@@ -28,7 +28,7 @@
       </div>
   
       <div class="enlaces" id="enlaces">
-        <a href="#">Inicio</a>
+        <a href="Evidencia-erick.html">Inicio</a>
         <a href="#">Cursos</a>
         <a href="#">Especializaciones</a>
         <a href="#">Contactos</a>
