--- a/Evidencia-erick.html
+++ b/Evidencia-erick.html
@@ -31,7 +31,7 @@
 
        <div class="enlaces" id="enlaces">
         <a href="#">Inicio</a>
-        <a href="#">Cursos</a>
+        <a href="cursos.html">Cursos</a>
         <a href="#">Especializaciones</a>
         <a href="#">Contactos</a>
         <a href="#">Aula Virtual</a>
