--- a/Evidencia-erick.html
+++ b/Evidencia-erick.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="Img-erick/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="style-erick/styles-menu.css">
-    <link rel="stylesheet" href="style-erick/estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
-    <script src="js/jquery.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="shortcut icon" href="Img-erick/favicon.ico">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="style-erick/styles-menu.css">
+  <link rel="stylesheet" href="style-erick/estilo.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
+  <script src="js/jquery.js"></script>
 </head>
 
 <body>
-    
+
   <header id="header">
     <nav class="menu">
-       <div class="logo">
-            <a href="#">
-                <img src="Img-erick/Logo.svg" alt="img-fluid logos">
-            </a>
+      <div class="logo">
+        <a href="#">
+          <img src="Img-erick/Logo.svg" alt="img-fluid logos">
+        </a>
 
-            <a href="#" class="btn-menu" id="btn-menu">
-                <i class="fa-solid fa-bars icono-menu"></i>
-            </a>
-       </div> 
+        <a href="#" class="btn-menu" id="btn-menu">
+          <i class="fa-solid fa-bars icono-menu"></i>
+        </a>
+      </div>
 
-       <div class="enlaces" id="enlaces">
+      <div class="enlaces" id="enlaces">
         <a href="#">Inicio</a>
         <a href="cursos.html">Cursos</a>
         <a href="#">Especializaciones</a>
         <a href="#">Contactos</a>
         <a href="#">Aula Virtual</a>
-       </div>
+      </div>
 
     </nav>
-</header>
+  </header>
 
 
-    <div class="main-banner">
-        <img src="Img/banner-5.jpg" alt="" class="img-fluid main-banner-img">
+  <div class="main-banner">
+    <img src="Img/banner-5.jpg" alt="" class="img-fluid main-banner-img">
 
     <h1>Especializate con nosotros</h1>
     <br>
@@ -50,177 +51,179 @@
 
     <br>
 
-   <button class="boton">Ver Cursos</button>
-   <button class="boton-2">Ver Especializaciones</button>
+    <button class="boton">Ver Cursos</button>
+    <button class="boton-2">Ver Especializaciones</button>
 
-   <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp icon"></i></a>
-   </div>
+    <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp icon"></i></a>
+  </div>
 
-   <br><br><br>
+  <br><br><br>
 
-   <h3>Nuestros Beneficios</h3>
+  <h3>Nuestros Beneficios</h3>
 
-   <br><br>
+  <br><br>
 
-   <div class="container">
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-3">
-            <div class="card" style="width: 18rem;">
-              <img src="Img/beneficio-1.jpg" class="card-img-top" alt="...">
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-12 col-md-3">
-            <div class="card" style="width: 18rem;">
-              <img src="Img/beneficio-2.jpg" class="card-img-top" alt="...">
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-12 col-md-3">
-            <div class="card" style="width: 18rem;">
-              <img src="Img/beneficio-3.jpg" class="card-img-top" alt="...">
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-12 col-md-3">
-            <div class="card" style="width: 18rem;">
-              <img src="Img/beneficio-4.jpg" class="card-img-top" alt="...">
-            </div>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img/beneficio-1.jpg" class="card-img-top" alt="...">
+        </div>
       </div>
-   </div>
 
-   <br><br><br>
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img/beneficio-2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
 
-    <h2>Cursos Destacados</h2>
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img/beneficio-3.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
 
-    <br><br>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">MEGA CURSO DE <br> AUTOCAD 2021</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-10.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">MARCOS Y PROGAMACION<br> VBA 2021</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-14.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">ESPECIALISTA EN <br> EXCEL PROFESIONAL 2021</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-13.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">DISEÑO WEB <br> RESPONSIVE</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
-        </div>                  
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img/beneficio-4.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
     </div>
+  </div>
 
-    <br><br>
+  <br><br><br>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-9.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">ESPECIALISTA EN<br> POWER POINT BI 2020</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
+  <h2>Cursos Destacados</h2>
 
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">EXCEL FINANCIERO<br> 2020</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
+  <br><br>
 
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">SQL SERVER<br>2019</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-3">
-                <div class="card" style="width: 18rem;">
-                        <img src="Img-erick/curso-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">ADOBE ILLUSTRATOR<br>CC 2020</h5>
-                          <a href="#" class="btn btn-primary">Conocer Mas</a>
-                        </div>
-                </div>
-            </div>
-        </div>                  
-    </div>
-
-    <br><br><br>
-
-    <a href="#" class="zzz">Explorar mas Cursos <i class="fa-solid fa-hand-point-right"></i></a>
-    <br><br><br><br>
-
-    <!-- Pie de página -->
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-2">
-            <i class="fa-solid fa-mobile-screen-button icon-footer1"></i>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-2 footer-sec1">
-            <h5 class="titulo-foot">Contacto</h5>
-            <p class="parr-foot">+51 939 123 987</p>
-            <p class="parr-foot">+51 939 123 987(Whatsapp)</p>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-2">
-            <i class="fa-solid fa-envelope icon-footer2"></i>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-2 footer-sec2">
-            <h5 class="titulo-foot">E-Mail</h5>
-            <p class="parr-foot">devlab.pe@gmail.com</p>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-2">
-            <i class="fa-solid fa-location-dot icon-footer3"></i>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-2 footer-sec3">
-            <h5 class="titulo-foot">Dirección</h5>
-            <p class="parr-foot">Lima - Perú</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">MEGA CURSO DE <br> AUTOCAD 2021</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
           </div>
         </div>
       </div>
-    </footer>
-    <footer class="copy">DEVLAB SOLUCIONES INFORMÁTICAS SAC @2022 - Todos los derechos reservados <span style="padding-left: 30em  ;">Desarrollador por <span style="color:red ;">Giancarlos Barboza N.</span> </span></footer>
+
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-10.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">MARCOS Y PROGAMACION<br> VBA 2021</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-14.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">ESPECIALISTA EN <br> EXCEL PROFESIONAL 2021</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-13.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">DISEÑO WEB <br> RESPONSIVE</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br><br>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-9.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">ESPECIALISTA EN<br> POWER POINT BI 2020</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">EXCEL FINANCIERO<br> 2020</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-4.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">SQL SERVER<br>2019</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="card" style="width: 18rem;">
+          <img src="Img-erick/curso-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">ADOBE ILLUSTRATOR<br>CC 2020</h5>
+            <a href="#" class="btn btn-primary">Conocer Mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br><br><br>
+
+  <a href="#" class="zzz">Explorar mas Cursos <i class="fa-solid fa-hand-point-right"></i></a>
+  <br><br><br><br>
+
+  <!-- Pie de página -->
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-2">
+          <i class="fa-solid fa-mobile-screen-button icon-footer1"></i>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-2 footer-sec1">
+          <h5 class="titulo-foot">Contacto</h5>
+          <p class="parr-foot">+51 939 123 987</p>
+          <p class="parr-foot">+51 939 123 987(Whatsapp)</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-2">
+          <i class="fa-solid fa-envelope icon-footer2"></i>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-2 footer-sec2">
+          <h5 class="titulo-foot">E-Mail</h5>
+          <p class="parr-foot">devlab.pe@gmail.com</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-2">
+          <i class="fa-solid fa-location-dot icon-footer3"></i>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-2 footer-sec3">
+          <h5 class="titulo-foot">Dirección</h5>
+          <p class="parr-foot">Lima - Perú</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <footer class="copy">DEVLAB SOLUCIONES INFORMÁTICAS SAC @2022 - Todos los derechos reservados <span
+      style="padding-left: 30em  ;">Desarrollador por <span style="color:red ;">Giancarlos Barboza N.</span> </span>
+  </footer>
 
 
 
@@ -229,4 +232,5 @@
   <script src="js-erick/menu-flex.js"></script>
 
 </body>
+
 </html>
