--- a/Evidencia-erick.html
+++ b/Evidencia-erick.html
@@ -31,11 +31,11 @@
       </div>
 
       <div class="enlaces" id="enlaces">
-        <a href="#">Inicio</a>
+        <a href="Evidencia-erick.html">Inicio</a>
         <a href="cursos.html">Cursos</a>
-        <a href="#">Especializaciones</a>
+        <a href="index.html">Especializaciones</a>
         <a href="#">Contactos</a>
-        <a href="#">Aula Virtual</a>
+        <a href="aula-virtual.html">Aula Virtual</a>
       </div>
 
     </nav>
