--- a/aula-virtual.html
+++ b/aula-virtual.html
@@ -27,7 +27,7 @@
            <div class="enlaces" id="enlaces">
             <a href="Evidencia-erick.html">Inicio</a>
             <a href="cursos.html">Cursos</a>
-            <a href="#">Especializaciones</a>
+            <a href="index.html">Especializaciones</a>
             <a href="#">Contactos</a>
             <a href="aula-virtual.html">Aula Virtual</a>
            </div>
